fix: adjust grid gap in category component to improve layout spacing

--- a/apps/website/app/scss/components/_category.scss
+++ b/apps/website/app/scss/components/_category.scss
@@ -15,7 +15,7 @@
     &__list {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
-      gap: 30px;
+      gap: 10px;
       width: 100%;
       padding: 0;
       margin: 0;
